Add first ML modeling notebook (Voting Ensemble) with cross-validation and Kaggle results

--- a/notebooks/01_eda_and_feature_engineering.ipynb
+++ b/notebooks/01_eda_and_feature_engineering.ipynb
@@ -2137,8 +2137,8 @@
     "desc = {\n",
     "    'MSSubClass': 'Type of house sold',\n",
     "    'LotArea': 'Total lot size',\n",
-    "    'OverallQual': 'Overall quality (1–10)',\n",
-    "    'OverallCond': 'Overall condition (1–10)',\n",
+    "    'OverallQual': 'Overall quality (1 to 10)',\n",
+    "    'OverallCond': 'Overall condition (1 to 10)',\n",
     "    'MasVnrArea': 'Brick or stone wall area',\n",
     "    'BsmtFinSF1': 'Finished basement area',\n",
     "    'TotRmsAbvGrd': 'Total rooms above ground',\n",
@@ -2164,7 +2164,7 @@
     "    'BsmtExposure': 'Basement exposure type',\n",
     "    'GarageType': 'Garage location',\n",
     "    'GarageFinish': 'Garage finish',\n",
-    "    'MoSold_cat': 'Month sold (Jan–Dec)'\n",
+    "    'MoSold_cat': 'Month sold (Jan to Dec)'\n",
     "}\n",
     "\n",
     "features_df['Description'] = features_df['Feature'].map(desc)\n",
