chore: add auto-directory creation block to EDA and Voting notebooks

--- a/notebooks/01_eda_and_feature_engineering.ipynb
+++ b/notebooks/01_eda_and_feature_engineering.ipynb
@@ -65,6 +65,10 @@
     "REPORTS_TABLES = Path(\"../reports/tables\")\n",
     "REPORTS_FIGURES = Path(\"../reports/figures/EDA\")\n",
     "\n",
+    "# Create directories if missing\n",
+    "for folder in [DATA_RAW, DATA_PROCESSED, REPORTS_TABLES, REPORTS_FIGURES]:\n",
+    "    folder.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
     "# Plot themes and palettes defaults\n",
     "plt.rcParams[\"figure.figsize\"] = (10, 5)\n",
     "plt.rcParams[\"axes.titlesize\"] = 14\n",
