--- a/notebooks/02_voting_ensemble.ipynb
+++ b/notebooks/02_voting_ensemble.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 129,
    "id": "8c8dfd2e-ba2a-4a05-bf47-194b37b8d6ce",
    "metadata": {},
    "outputs": [
@@ -40,9 +40,9 @@
       "Folder statuses:\n",
       "\t C:\\Users\\Usuario\\Desktop\\github-repos\\house-prices-prediction\\data\\raw - Ready\n",
       "\t C:\\Users\\Usuario\\Desktop\\github-repos\\house-prices-prediction\\data\\interim - Ready\n",
-      "\t C:\\Users\\Usuario\\Desktop\\github-repos\\house-prices-prediction\\data\\processed\\voting - Ready\n",
+      "\t C:\\Users\\Usuario\\Desktop\\github-repos\\house-prices-prediction\\data\\processed\\gradient_boosting - Ready\n",
       "\t C:\\Users\\Usuario\\Desktop\\github-repos\\house-prices-prediction\\reports\\tables - Ready\n",
-      "\t C:\\Users\\Usuario\\Desktop\\github-repos\\house-prices-prediction\\reports\\figures\\voting - Ready\n",
+      "\t C:\\Users\\Usuario\\Desktop\\github-repos\\house-prices-prediction\\reports\\figures\\gradient_boosting - Ready\n",
       "> Environment setup completed.\n"
      ]
     }
@@ -81,10 +81,14 @@
     "# Paths\n",
     "DATA_RAW = Path('../data/raw')\n",
     "DATA_INTERIM = Path('../data/interim')\n",
-    "DATA_PROCESSED = Path('../data/processed/voting')\n",
+    "DATA_PROCESSED = Path('../data/processed/gradient_boosting')\n",
     "REPORTS_TABLES = Path('../reports/tables')\n",
-    "REPORTS_FIGURES = Path('../reports/figures/voting')\n",
+    "REPORTS_FIGURES = Path('../reports/figures/gradient_boosting')\n",
     "MODELS = Path('../models')\n",
+    "\n",
+    "# Create directories if missing\n",
+    "for folder in [DATA_RAW, DATA_INTERIM, DATA_PROCESSED, REPORTS_TABLES, REPORTS_FIGURES, MODELS]:\n",
+    "    folder.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# Plot themes and palettes defaults\n",
     "plt.rcParams['figure.figsize'] = (10, 5)\n",
@@ -725,7 +729,7 @@
    "id": "d9a76444-63d9-41d5-a0ce-364c516bd11a",
    "metadata": {},
    "source": [
-    "### 4. Model Building and Hyperparameter Tuning"
+    "## 4. Model Building and Hyperparameter Tuning"
    ]
   },
   {
@@ -981,7 +985,7 @@
    "id": "7a102f34-a0b2-46b0-84fa-68c07ffd29cc",
    "metadata": {},
    "source": [
-    "### 5. Model Evaluation"
+    "## 5. Model Evaluation"
    ]
   },
   {
