chore: add auto-directory creation block to EDA and Voting notebooks

--- a/notebooks/02_voting_ensemble.ipynb
+++ b/notebooks/02_voting_ensemble.ipynb
@@ -81,9 +81,9 @@
     "# Paths\n",
     "DATA_RAW = Path('../data/raw')\n",
     "DATA_INTERIM = Path('../data/interim')\n",
-    "DATA_PROCESSED = Path('../data/processed/gradient_boosting')\n",
+    "DATA_PROCESSED = Path('../data/processed/voting')\n",
     "REPORTS_TABLES = Path('../reports/tables')\n",
-    "REPORTS_FIGURES = Path('../reports/figures/gradient_boosting')\n",
+    "REPORTS_FIGURES = Path('../reports/figures/voting')\n",
     "MODELS = Path('../models')\n",
     "\n",
     "# Create directories if missing\n",
