docs: fix Introduction purposes section

--- a/notebooks/02_voting_ensemble.ipynb
+++ b/notebooks/02_voting_ensemble.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 130,
    "id": "8c8dfd2e-ba2a-4a05-bf47-194b37b8d6ce",
    "metadata": {},
    "outputs": [
@@ -40,9 +40,9 @@
       "Folder statuses:\n",
       "\t C:\\Users\\Usuario\\Desktop\\github-repos\\house-prices-prediction\\data\\raw - Ready\n",
       "\t C:\\Users\\Usuario\\Desktop\\github-repos\\house-prices-prediction\\data\\interim - Ready\n",
-      "\t C:\\Users\\Usuario\\Desktop\\github-repos\\house-prices-prediction\\data\\processed\\gradient_boosting - Ready\n",
+      "\t C:\\Users\\Usuario\\Desktop\\github-repos\\house-prices-prediction\\data\\processed\\voting - Ready\n",
       "\t C:\\Users\\Usuario\\Desktop\\github-repos\\house-prices-prediction\\reports\\tables - Ready\n",
-      "\t C:\\Users\\Usuario\\Desktop\\github-repos\\house-prices-prediction\\reports\\figures\\gradient_boosting - Ready\n",
+      "\t C:\\Users\\Usuario\\Desktop\\github-repos\\house-prices-prediction\\reports\\figures\\voting - Ready\n",
       "> Environment setup completed.\n"
      ]
     }
@@ -119,8 +119,7 @@
     "\n",
     "1. Build and compare baseline and ensemble regression models.\n",
     "2. Evaluate model performance using cross-validation (RMSE, R²).\n",
-    "3. Analyze feature importance to refine future feature engineering.\n",
-    "4. Generate final predictions for the Kaggle test set."
+    "3. Generate final predictions for the Kaggle test set."
    ]
   },
   {
